Map drawer additional details overflow bugfix

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -118,6 +118,7 @@
 #map-drawer-details-wrapper {
     display: none;
     max-height: 120px;
+    word-break: break-word;
 }
 
 #booking-confirmation-text, #booking-finish-text {
